package ar.edu.utn.frba.dds.model.entities;

public enum Estado {
  ACEPTADA,
  RECHAZADA,
  PENDIENTE,
  SPAM
}
