package ar.edu.utn.frba.dds.model.entities;

import lombok.Data;

@Data
public class Origen {
  private String url;
  private String tipo;
}
